Prevent overflow on badges

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -16,4 +16,5 @@
   padding: 5px;
   border-radius: 3px;
   margin-right: 5px;
+  display: inline-block; // to prevent overflow
 }
